Bug 165115 - Libreoffice 24.8.1.2 writer file OTT, error password.
Summary: Libreoffice 24.8.1.2 writer file OTT, error password.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.8.1.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, regression
: 165705 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-07 19:57 UTC by manuel
Modified: 2025-03-12 14:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description manuel 2025-02-07 19:57:25 UTC
Description:
Hi

reproduce easy:
new writer, save in OTT with password, password:1234, close, re-open file OTT with password, password: 1234, result password is error..

version libreoffice 24.8.1.2 linux (opensuse)

Steps to Reproduce:
1.new writer
2.save in OTT with password, password:1234
3.close
4.re-open file OTT with password, password: 1234
5. message error: password invalid.. never open file OTT with password

Actual Results:
this is true BUG

Expected Results:
need to fixed the BUG


Reproducible: Always


User Profile Reset: No

Additional Info:
linux 64 but, opensuse 15.6 kde
Comment 1 m_a_riosv 2025-02-08 01:03:36 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6042e60d69c40d1f307710e60a278cb286d68603
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 2 Saburo 2025-02-08 04:10:10 UTC
bisected with win64-24.8

commit d0dcd87788910e3c9f67a2b68534019c05b77bad
author	Thorsten Behrens <thorsten.behrens@allotropia.de>	Mon Jan 15 00:26:02 2024 +0100
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Tue Jan 23 21:41:03 2024 +0100
tree 498e3e4c9683c6cfab001de1bc3f0dc98414873b
parent ac1cafad398b13a831de913e11143760fd6b822b [diff]

Make wholesome ODF package encryption the default

Change-Id: I825ae7a5e4b80d390804a7bb2cfdfc3b1843bd07
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162066
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Comment 3 Saburo 2025-02-11 10:24:58 UTC
It was also reproduced with calc(ots), Impress(otp), and draw(otg).

Thorsten, can you take a look?
Comment 4 Commit Notification 2025-03-03 11:33:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0be897258beadc77ad2fa129f12ccbdb5c956e93

tdf#165115 sfx2: fix storing wholesome encrypted ODF templates

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2025-03-03 11:35:57 UTC
fixed on master
Comment 6 Commit Notification 2025-03-03 13:20:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/65c2c9d96fa192d9fdee590bb35199a4c949247a

tdf#165115 sfx2: fix storing wholesome encrypted ODF templates

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-03-03 14:26:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/eb3756d45a9cffaf3a7dc4d06113adf43df201f5

tdf#165115 sfx2: fix storing wholesome encrypted ODF templates

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-03-03 16:29:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/835fcbca7ac1d17ac586ce9f1519e1da67edaef8

tdf#165115: odf_export2: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Mike Kaganski 2025-03-12 14:29:14 UTC
*** Bug 165705 has been marked as a duplicate of this bug. ***