tdf#165115 sfx2: fix storing wholesome encrypted ODF templates

Oops, hard-coded SetupStorage(bTemplate=false) which caused wrong
MediaType on the root folder and:

  ManifestExport.cxx:131: ManifestExport::ManifestExport(): Assertion `aDocMediaType.isEmpty() || aDocMediaType == aMediaType' failed.

(regression from commit 3b347664b26d58d44f685a607a5e6d10dff89cd4)

Change-Id: Ia65ba39e8a853f47d0d58acdca90fd6e12b7cd7d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182372
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 0be897258beadc77ad2fa129f12ccbdb5c956e93)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182429
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>